[tool.poetry]
name = "gakugun-threads-identify"
version = "0.1.0"
description = ""
authors = ["nitoca <takatakaccha@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysql = "^0.0.3"
mysql-connector-python = "^9.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
